Default background of luminosity masks should be black.

In CMYK groups this is NOT the same as "all components 0".

This improves the rendering of Bug689931a.pdf